# tap-sklik

./: .env.dev  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
sklik_el/: client.py  extract.py  settings.py
tap_sklik/: __init__.py  __main__.py  cli.py  tap.py
tap_sklik/schemas/: ad_campaigns.json
tap_sklik/singer/: cli.py  config.py  tap.py
tap_sklik/singer/schemas/: ad_campaigns.json
tap_sklik/sklik/: client.py  constants.py  dateutils.py  extract.py
tests/: conftest.py  sklik_client_tester_plugin.py  test_client.py  test_dateutils.py  test_extract.py  test_sklik_client_tester_plugin.py  test_tap.py
