[tool.poetry]
name = "tap-sklik"
version = "0.1.0"
description = "A singer tap for Sklik"
authors = ["Guillaume Desforges <guillaume.desforges.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
singer-python = "^5.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
tap-sklik = 'tap_sklik.singer.cli:cli'
